--- a/style/style.css
+++ b/style/style.css
@@ -57,7 +57,7 @@ nav{
     margin-top: 28px;
     width: 100%;
     height: 645px;
-    background-image: url(/assets/Hero-bg.png);
+    background-image: url('/assets/Hero-bg.png');
 }
 .header-content{
     text-align: center;
@@ -259,7 +259,6 @@ nav{
     margin-bottom: 58px;
     background-image: url('/assets/handshake.jpg');
     background-position: center;
-    background-size: cover;
     border-radius: 16px;
 }
 .support-title{
